...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateEditTextQuantity"
        app:layout_constraintVertical_bias="0.161" />

    <Button
        android:id="@+id/updateProductBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/update_product_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
...
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/updateEditTextQuantity"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/add"
        android:contentDescription="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/updateEditTextQuantity"
        app:layout_constraintEnd_toEndOf="parent"
...
