...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateListActivity">

    <EditText
        android:id="@+id/editTextListName"
        android:layout_width="247dp"
        android:layout_height="83dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/hint_list"
        android:inputType="textPersonName"
...
